@@ -58,6 +58,10 @@ This file lists the incompatible changes between Version 2.x and older versions
     as an analog to zetak(). Or directly lfun(x^2+1, s) if a single value
     is needed. [closes #368, #1647]
   - rnfconductor now returns [cond, bnr, H] instead of [cond, bnr.clgp, H]
+  - polredabs([T,listP]) no longer returns 0 if the attached order cannot
+     be proven to be maximal: it computes the expected canonical polynomial
+     in all cases, which can be very slow. Always use polredbest() if you
+     don't require a canonical output.
 
 * Specific to the PARI library:
 ===============================
