@@ -1619,28 +1619,31 @@ nfbasic_to_nf(nfbasic_t *T, GEN ro, long prec)
 static GEN
 primes_certify(GEN dK, GEN dKP)
 {
-  pari_sp av = avma;
   long i, l = lg(dKP);
-  GEN v, D = dK;
+  GEN v, w, D = dK;
   v = vectrunc_init(l);
+  w = vectrunc_init(l);
   for (i = 1; i < l; i++)
   {
     GEN p = gel(dKP,i);
-    if (!isprime(p)) vectrunc_append(v, p);
+    vectrunc_append(isprime(p)? w: v, p);
     (void)Z_pvalrem(D, p, &D);
   }
   if (!is_pm1(D))
   {
     if (signe(D) < 0) D = negi(D);
-    if (!isprime(D)) vectrunc_append(v, D);
+    vectrunc_append(isprime(D)? w: v, D);
   }
-  fixlg(v, lg(v)); return gerepilecopy(av, v);
+  return mkvec2(v,w);
 }
 GEN
 nfcertify(GEN nf)
 {
+  pari_sp av = avma;
+  GEN vw;
   nf = checknf(nf);
-  return primes_certify(nf_get_disc(nf), nf_get_ramified_primes(nf));
+  vw = primes_certify(nf_get_disc(nf), nf_get_ramified_primes(nf));
+  return gerepilecopy(av, gel(vw,1));
 }
 
 #if 0 /* used to check benches between HNF nf.zk and LLL-reduced nf.zk */
@@ -2279,10 +2282,9 @@ remove_duplicates(GEN P, GEN A)
       k++;
       x = gel(P,i); a = gel(A,i);
     }
-  gel(A,k) = a;
-  gel(P,k) = x;
-  l = k+1; setlg(A,l); setlg(P,l);
-  avma = av;
+  l = k+1;
+  gel(A,k) = a; setlg(A,l);
+  gel(P,k) = x; setlg(P,l); avma = av;
 }
 
 static long
@@ -2767,7 +2769,7 @@ polredabs0(GEN x, long flag)
   GEN y, a, u;
   nfbasic_t T;
 
-  nfbasic_init(x, flag & nf_PARTIALFACT, &T);
+  nfbasic_init(x, nf_PARTIALFACT, &T);
   x = T.x; vx = varn(x);
 
   if (degpol(x) == 1)
@@ -2780,8 +2782,18 @@ polredabs0(GEN x, long flag)
   else
   {
     GEN v;
-    if (!(flag & nf_PARTIALFACT)
-        && T.dKP && lg(primes_certify(T.dK, T.dKP)) != 1) return gen_0;
+    if (!(flag & nf_PARTIALFACT) && T.dKP)
+    {
+      GEN vw = primes_certify(T.dK, T.dKP);
+      v = gel(vw,1); l = lg(v);
+      if (l != 1)
+      { /* fix integral basis */
+        GEN w = gel(vw,2);
+        for (i = 1; i < l; i++)
+          w = ZV_union_shallow(w, gel(Z_factor(gel(v,i)),1));
+        nfbasic_init(mkvec2(x,w), 0, &T);
+      }
+    }
     v = polredabs_aux(&T, &u);
     y = gel(v,1);
     a = gel(v,2); l = lg(a);
