@@ -69,4 +69,5 @@ x^16 - 4*x^15 - 334*x^14 + 264*x^13 + 32231*x^12 + 57392*x^11 - 1031422*x^10
  - 3628868*x^9 + 7185297*x^8 + 42417784*x^7 + 11283472*x^6 - 137773504*x^5 -
  127243504*x^4 + 69059728*x^3 + 56307944*x^2 - 6264432*x + 6436
   ***   Warning: new stack size = 25165824 (24.000 Mbytes).
-Total time spent: 5340
+x^5 + 5*x - 1
+Total time spent: 4393
